# grassfire

./: .gitignore  README.md  demo_grassfire.ipynb  pyproject.toml  setup.cfg  setup.py  test_continuous.sh
.github/workflows/: uv-tests.yml
logo/: logo.py
src/grassfire/: __init__.py  benchmark_polygon_archive_segments.py  calc.py  collapse.py  initialize.py  inout.py  line2d.py  ordered_sequence.py  primitives.py  regression.py  transform.py  vectorops.py
src/grassfire/events/: check.py  edge.py  flip.py  lib.py  loop.py  parallel.py  split.py
src/grassfire/test/: fixtures.py  grassfire_tests.py  intersection.py  test_bisector.py  test_collapsetime.py  test_failing_test.py  test_grassfire.py  test_parallel.py  test_parallel_L.py  test_parallel_failing.py  test_parallel_simple.py  test_pslg.py
src/grassfire/test/attic/: generate_circular.py  generate_equilateral_offset.py  langejan.py  manual.py  test.py  test_collapse.py  test_collapse_0.py  test_collapse_1.py  test_collapse_2.py  test_collapse_3.py  test_collapse_inf.py  test_events.py  test_line_bisector.py  test_replace.py  test_split.py
src/grassfire/test/bug7/: bug7.py  goes.py  langejan.py
src/grassfire/test/bug8/: bug8.py
src/grassfire/test/bug9/: bug9.py
src/grassfire/test/ica/: church_naaldwijk.py  goes_centre.py  simple.py
src/grassfire/tests2/: README.md  test_calc.py  test_collapse.py  test_event_loop_debugging.py  test_line2d.py  test_regression.py  test_transform.py  test_vectorops.py
src/triangle/: __init__.py
src/triangle/delaunay/: __init__.py  cdt.py  insert_hcpo.py  insert_kd.py  iter.py  tds.py
tests/: test_benchmark_polygon_archive_segments.py  test_ordered_sequence.py  test_packaging_metadata.py  test_polygon_archive_segments.py
