[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grassfire"
version = "0.1.dev0"
description = ""
readme = "README.md"
license = "MIT"
authors = [
    { name = "Martijn Meijers", email = "b.m.meijers@tudelft.nl" }
]
requires-python = ">=3.8"
dependencies = [
    "geompreds @ git+https://github.com/bmmeijers/predicates/",
    "tri @ git+https://github.com/bmmeijers/tri/",
    "oseq @ git+https://github.com/bmmeijers/oseq/",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/micycle1/grassfire"

[tool.hatch.build.targets.wheel]
packages = ["src/grassfire"]
